trying to fix styling on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,7 +11,7 @@ body{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
     @media only screen and (max-width: 640px) {
-        font-size: 60px;
+        font-size: 50px;
 }
 }
 
